--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-numpy==1.21.6
-pandas==1.3.5
-scikit-learn==1.0.2
-scipy==1.7.3
+numpy==2.1.1
+pandas==2.2.2
+scikit-learn==1.5.1
+scipy==1.14.1
 fastprogress==1.0.3
 torchsampler==0.1.2
-matplotlib==3.7.2
-seaborn==0.12.2
-captum==0.6.0
-lightgbm==4.0.0
-bayesian-optimization==1.4.3
-einops==0.7.0
+matplotlib==3.9.2
+seaborn==0.13.2
+captum==0.7.0
+statsmodels==0.14.3
+bayesian-optimization==1.5.1
+einops==0.8.0
+prettytable==3.11.0
+biopython==1.84
+transformers==4.44.2
